Fixed seats overlapping with other components

--- a/client/src/components/form/PaymentDetailsForm.css
+++ b/client/src/components/form/PaymentDetailsForm.css
@@ -21,6 +21,6 @@ img.seats {
 
 @media only screen and (min-width: 768px) {
     img.seats {
-        width: auto;
+        width: 75%;
     }
 }
